@@ -7,6 +7,10 @@
   required to used mgcv type GAMs with JAGS. Useful for complex random 
   effects structures, for example.
 
+* smoothCon failed if selection penalties requested, but term was unpenalized.
+  Now fixed (no sleection penalties on unpenalized terms.)
+  
+
 * gam.check would fail for tensor product smooths with by variables - fixed.
 
 * predict.gam would fail when predicting for more data than the blocksize
